// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with collapse prop 1`] = `
<button
  className="sc-bwzfXH jCmPqI"
/>
`;

exports[`renders correctly with disabled prop 1`] = `
<button
  className="sc-bwzfXH MRQQs"
  disabled={true}
/>
`;

exports[`renders correctly with expand prop 1`] = `
<button
  className="sc-bwzfXH bzTgZQ"
/>
`;

exports[`renders correctly with hidden prop 1`] = `
<button
  className="sc-bwzfXH jKNZC"
  hidden={true}
/>
`;

exports[`renders correctly with no props 1`] = `
<button
  className="sc-bwzfXH iXKwGU"
/>
`;

exports[`renders correctly with secondary prop 1`] = `
<button
  className="sc-bwzfXH bfoTQe"
/>
`;

exports[`renders correctly with small prop 1`] = `
<button
  className="sc-bwzfXH glNthc"
/>
`;
